--- a/Index.html
+++ b/Index.html
@@ -79,5 +79,15 @@
             </div>
         </div>
     </div>
+    <div class="showcase">
+        <div class="rectangle-showcase"></div>
+        <img src="https://shorturl.at/UVOMU">
+        <div class="showcase-detail">
+            <h1>Showcase</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, porro eligendi excepturi laboriosam eum quas ipsam facere eveniet et corporis corrupti rem?</p>
+            <div class="btn-container">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
